# Armorial-Proto

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
amun/: amun_command.proto  amun_gamestate.proto  amun_grsim_commands.proto  amun_grsim_packet.proto  amun_grsim_replacement.proto  amun_logfile.proto  amun_ssl_detection.proto  amun_ssl_game_controller_auto_ref.proto  amun_ssl_game_controller_team.proto  amun_ssl_game_event_2019.proto  amun_ssl_gc_api.proto  amun_ssl_gc_change.proto  amun_ssl_gc_ci.proto  amun_ssl_gc_engine.proto  amun_ssl_gc_state.proto  amun_ssl_geometry.proto  amun_ssl_referee.proto  amun_ssl_simulation_config.proto  amun_ssl_simulation_control.proto  amun_ssl_simulation_robot_feedback.proto  amun_ssl_vision_detection_tracked.proto  amun_ssl_vision_wrapper_tracked.proto  amun_ssl_wrapper.proto  amun_status.proto  amun_timeline.proto  amun_userinput.proto  amun_world.proto
referee/: ssl_autoref_ci.proto  ssl_gc_api.proto  ssl_gc_change.proto  ssl_gc_ci.proto  ssl_gc_common.proto  ssl_gc_engine.proto  ssl_gc_engine_config.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_rcon.proto  ssl_gc_rcon_autoref.proto  ssl_gc_rcon_remotecontrol.proto  ssl_gc_rcon_team.proto  ssl_gc_referee_message.proto  ssl_gc_state.proto  ssl_vision_detection.proto  ssl_vision_detection_tracked.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto  ssl_vision_wrapper_tracked.proto
services/: actuatorservice.proto  basestationservice.proto  coachservice.proto  loggerservice.proto  messages.proto  sensorservice.proto  ssl_gc_common.proto  ssl_gc_game_event.proto  ssl_gc_geometry.proto  ssl_gc_referee_message.proto  ssl_vision_detection.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto  visionservice.proto
simulation/: ssl_gc_common.proto  ssl_simulation_config.proto  ssl_simulation_control.proto  ssl_simulation_error.proto  ssl_simulation_robot_control.proto  ssl_simulation_robot_feedback.proto  ssl_simulation_synchronous.proto  ssl_vision_detection.proto  ssl_vision_geometry.proto
sslvision/: ssl_vision_detection.proto  ssl_vision_geometry.proto  ssl_vision_wrapper.proto  sslvision_detection.proto  sslvision_geometry.proto  sslvision_wrapper.proto
